Make Adam exactly the same as in paper and pytorch

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ keywords = ["machine-learning", "optimization", "gradient"]
 [dependencies]
 
 num-traits = "0.2"
+
+[dev-dependencies]
+
+tch = "0.13"
